WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155376
Creating and releasing a WKBackForwardListItem crashes
https://bugs.webkit.org/show_bug.cgi?id=155376
Summary
Creating and releasing a WKBackForwardListItem crashes
Anders Carlsson
Reported
2016-03-11 12:54:56 PST
Creating and releasing a WKBackForwardListItem crashes
Attachments
Patch
(1.32 KB, patch)
2016-03-11 12:56 PST
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2016-03-11 12:56:31 PST
Created
attachment 273753
[details]
Patch
Anders Carlsson
Comment 2
2016-03-11 12:59:14 PST
Committed
r198041
: <
http://trac.webkit.org/changeset/198041
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug