Creating and releasing a WKBackForwardListItem crashes https://bugs.webkit.org/show_bug.cgi?id=155376 rdar://problem/17377712

Reviewed by Dan Bernstein.

Make init unavailable.

* UIProcess/API/Cocoa/WKBackForwardListItem.h:

Canonical link: https://commits.webkit.org/173491@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198041 268f45cc-cd09-0410-ab3c-d52691b4dbfc